--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^8.0.0",
-    "pdfjs-dist": "^3.4.120",
+    "npm": "^10.8.2",
+    "pdfjs-dist": "^3.0.279",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -32,7 +33,8 @@
     "react-multi-carousel": "^2.8.5",
     "react-pdf": "^9.1.0",
     "react-rating-stars-component": "^2.2.0",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
