--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@material-tailwind/html": "^2.2.2",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.4",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.4",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^8.0.0",
     "npm": "^10.8.2",
@@ -33,6 +38,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-pdf": "^9.1.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "uninstall": "^0.0.0"
   },
