--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-pdf": "^9.1.0",
+    "react-player": "^2.16.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
