--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -26,6 +28,8 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.4.0",
+    "cloudinary-react": "^1.8.1",
     "firebase": "^10.12.4",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^8.0.0",
